# remote_app

./: README.md  docker-compose.yml  pyproject.toml
frontend/: README.md  package-lock.json  package.json  quasar.conf.js
frontend/src/boot/: socket.js
frontend/src/components/: SimpleKeyboard.vue  Touchpad.vue
frontend/src/pages/: Index.vue
frontend/src/store/: index.js
frontend/src/store/programs/: index.js
web/: app.py  config.py
web/os_handler/: app.py  programs.py
web/src/: streamer.py
