[tool.poetry]
name = "bluetoothserver"
version = "0.1.0"
description = ""
authors = ["dburton90 <daniel.barton@seznam.cz>"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^7.18.1"
Flask = "^1.1.2"
vidgear = "^0.1.9"
opencv-python = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
